<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BoundaryMaker">

    <Button
        android:id="@+id/HowToButton"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:background="#ffffff"
        android:text="@string/how_to_use"
        android:textColor="@color/buttonTextColor"
        android:textSize="20sp" />

    <Button
        android:id="@+id/RestrictButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@drawable/button_background"
        android:text="@string/begin_restrict_button"
        android:textColor="@color/buttonTextColor"
        android:textSize="20sp" />

    <Button
        android:id="@+id/PermitButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@drawable/button_background"
        android:text="@string/begin_permit_button"
        android:textColor="@color/buttonTextColor"
        android:textSize="20sp" />

</LinearLayout>